# internal/models/books.go
@@ -3,8 +3,10 @@ package models
 import "gorm.io/gorm"
 
 type Book struct {
-	gorm.Model
+	gorm.Model    `swaggerignore:"true"`
 	Title         string
 	Author        string
 	PublishedYear string
+	Genres        []Genre `gorm:"many2many:book_genres"`
+	Description   string
 }
